# embedded-crypto-ticker

./: .gitignore  .gitmodules  Doxyfile  Makefile  sdkconfig
.github/workflows/: build-esp32.yml  build-frontend.yml  build-run-tests.yml  build-x86_64-simulator.yml  docs.yml
components/gui/fonts/: fonts.hpp
components/gui/hal/: driver.hpp
components/gui/themes/: dark.hpp
components/gui/tools/: cpl.hpp  format_percentage.hpp  format_price.hpp
components/gui/views/: view.hpp
components/gui/widgets/: widget.hpp
docs/: annotated.html  button_8hpp_source.html  chart_8hpp_source.html  classCrypto_1_1CoinGecko-members.html  classCrypto_1_1CoinGecko.html  classGUI_1_1Theme-members.html  classGUI_1_1Theme.html  classGUI_1_1ThemeDark-members.html  classGUI_1_1ThemeDark.html  classGUI_1_1ThemeFactory-members.html  classGUI_1_1ThemeFactory.html  classGUI_1_1Views_1_1Legacy-members.html  classGUI_1_1Views_1_1Legacy.html  classGUI_1_1Views_1_1Loading-members.html  classGUI_1_1Views_1_1Loading.html  classGUI_1_1Views_1_1Provisioning-members.html  classGUI_1_1Views_1_1Provisioning.html  classGUI_1_1Views_1_1Ticker-members.html  classGUI_1_1Views_1_1Ticker.html  classGUI_1_1Views_1_1View-members.html  classGUI_1_1Views_1_1View.html  classGUI_1_1Widgets_1_1Chart-members.html  classGUI_1_1Widgets_1_1Chart.html  classGUI_1_1Widgets_1_1Image-members.html  classGUI_1_1Widgets_1_1Image.html  classGUI_1_1Widgets_1_1Label-members.html  classGUI_1_1Widgets_1_1Label.html  classGUI_1_1Widgets_1_1Percentage-members.html  classGUI_1_1Widgets_1_1Percentage.html  classGUI_1_1Widgets_1_1Price-members.html  classGUI_1_1Widgets_1_1Price.html  classGUI_1_1Widgets_1_1QRCode-members.html  classGUI_1_1Widgets_1_1QRCode.html  classGUI_1_1Widgets_1_1QuoteBanner-members.html  classGUI_1_1Widgets_1_1QuoteBanner.html  classGUI_1_1Widgets_1_1Spinner-members.html  classGUI_1_1Widgets_1_1Spinner.html  classGUI_1_1Widgets_1_1Widget-members.html  classGUI_1_1Widgets_1_1Widget.html  classHAL_1_1Driver-members.html  (+131 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+34 more)
esp32/: CMakeLists.txt  partitions.csv  sdkconfig
esp32/components/crypto/: CMakeLists.txt
esp32/components/crypto/data_sources/: coin_gecko.cpp  coin_gecko.hpp  sntp.cpp  sntp.hpp
esp32/components/crypto/hal/: requests.cpp  requests.hpp
esp32/components/crypto/tools/: json_parsing.hpp
esp32/components/database/: CMakeLists.txt  database.hpp
esp32/components/gui/: CMakeLists.txt
esp32/components/gui/assets/: warning_30.c
esp32/components/gui/hal/: driver.cpp
esp32/components/gui/themes/: theme.hpp
esp32/components/gui/views/startup/: loading.cpp  loading.hpp  provisioning.cpp
esp32/components/gui/views/ticker/: legacy.cpp  legacy.hpp  ticker.hpp
esp32/components/gui/widgets/elemental/: spinner.hpp
esp32/main/: CMakeLists.txt  configuration.hpp  main.cpp
esp32/main/containers/: crypto.cpp  crypto.hpp
esp32/main/crypto/data_sources/: sntp.cpp
esp32/main/crypto/hal/: requests.cpp
esp32/main/gui/hal/: driver.cpp
esp32/main/lib/crypto/: coin_gecko.cpp  coin_gecko.hpp  crypto_definitions.hpp  currency_definition.hpp  data_table.cpp  data_table.hpp  fiat_definitions.hpp
esp32/main/lib/gui/: CMakeLists.txt
esp32/main/lib/gui/assets/: black_60.c  btc_icon_60.c  dge_icon_60.c  eth_icon_60.c
esp32/main/lib/gui/tools/: format_percentage.hpp
esp32/main/lib/gui/views/startup/: loading.cpp  provisioning.cpp  provisioning.hpp
esp32/main/lib/gui/views/ticker/: legacy.cpp
esp32/main/lib/gui/widgets/: widget.hpp
esp32/main/lib/gui/widgets/composite/: quote_banner.hpp
esp32/main/lib/gui/widgets/elemental/: price.hpp
esp32/main/lib/hal/: button.cpp  button.hpp  hardware_information.cpp  hardware_information.hpp  lvgl_driver.cpp  lvgl_driver.hpp  nvs.cpp  nvs.hpp  requests.cpp  requests.hpp  sntp.cpp  sntp.hpp  ssl_certificate.cpp  ssl_certificate.hpp  system.cpp  system.hpp  wifi.cpp  wifi.hpp
esp32/main/lib/rest_server/: endpoints.cpp  endpoints.hpp  file_system.cpp  file_system.hpp  mdns.cpp  mdns.hpp  server.cpp  server.hpp
esp32/main/lib/tools/: json_parsing.hpp  volatile_database.hpp
esp32/main/tasks/: currency_update.cpp  currency_update.hpp  factory_reset.cpp  factory_reset.hpp
esp32/main/wifi/: manager.cpp  manager.hpp
front/: package-lock.json  package.json  vue.config.js
html/: annotated.html  dir_5beb22e403792e8b31f970b67e49ab74.html  files.html  functions_vars.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  structCrypto_1_1Definition-members.html
html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  all_9.js  functions_0.js  namespaces_0.js  searchdata.js  variables_1.js
include/hal/lvgl/: lvgl_driver.hpp
lib/crypto/data_sources/: coin_gecko.cpp  sntp.hpp
lib/crypto/hal/: requests.hpp
lib/database/: database.hpp
lib/gui/: CMakeLists.txt
lib/gui/assets/: ltc_icon_60.c
lib/gui/themes/: theme_factory.hpp
lib/gui/tools/: cpl.hpp  format_price.hpp
lib/gui/views/: view.hpp
lib/gui/views/ticker/: legacy.cpp  legacy.hpp
lib/gui/widgets/elemental/: label.hpp  qrcode.hpp
main/: CMakeLists.txt  main.cpp
patches/: esp32-button.patch
tests/: CMakeLists.txt
tests/esp32/main/containers/: CMakeLists.txt  test_crypto.cpp
tests/esp32/main/lib/: CMakeLists.txt
tests/esp32/main/lib/tools/: CMakeLists.txt  test_volatile_database.cpp
tests/example/: test_example.cpp
x86_64/: CMakeLists.txt  legacy_screen.cpp  loading_screen.cpp  lv_conf.h  lv_drv_conf.h  main.cpp  provisioning_screen.cpp
x86_64/gui/hal/: driver.cpp
x86_64/hal/: lvgl_driver.cpp
x86_64/hal/lvgl/: lvgl_driver.cpp
(+11 files in other folders)
